# nipype-generate-fieldmaps

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  README.md  nipype_generate_fieldmaps.py  pyproject.toml  pyrightconfig.json
.github/workflows/: lint.yaml  publish.yaml  type-check.yaml
