[tool.poetry]
name = "nipype-generate-fieldmaps"
version = "0.1.0"
description = "Nipype workflow to generate fieldmaps from EPI acquisitions with differing phase-encoding directions"
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nipype = "^1.1.0"
nibabel = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
reorder-python-imports = "^2.6.0"
bump2version = "^1.0.1"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
